# option

base/: option-base.cabal
base/Base/: Option.hs
church/: option-church.cabal
church/Church/: Option.hs
church/core/: OptionCore.hs
indef/: Elem.hsig  Option.hs  option-indef.cabal
indef/Sig/: Bool.hsig
indef/example/: Elem.hs
sig/: option-sig.cabal
utils/: Utils.hs  option-utils.cabal
