cabal-version: 2.2
name: option-indef
homepage: https://github.com/daig/option#readme
version: 0.1.0.0
category: 
synopsis: 
description: 
stability: cursed
bug-reports: https://github.com/daig/option/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT
license-file: LICENSE

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/daig/option

common x
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude AllowAmbiguousTypes BangPatterns BinaryLiterals ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveDataTypeable DeriveGeneric DeriveLift DerivingStrategies EmptyCase FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs LambdaCase MultiWayIf NamedFieldPuns NamedWildCards NegativeLiterals NumDecimals OverloadedLabels OverloadedStrings PartialTypeSignatures PatternSynonyms PolyKinds RankNTypes RecordWildCards RecursiveDo RoleAnnotations ScopedTypeVariables StandaloneDeriving StrictData TupleSections TypeApplications TypeFamilyDependencies TypeOperators ViewPatterns ImpredicativeTypes QuantifiedConstraints NoStarIsType NumericUnderscores BlockArguments DerivingVia UndecidableInstances

library 
  import: x
  exposed-modules: Option
  signatures: Elem, Sig.Bool
  build-depends: bool-sig, base

library elem
  import: x
  hs-source-dirs: example
  exposed-modules: Elem
  build-depends: base

library foo
  import: x
  hs-source-dirs: example
  reexported-modules: Option
  build-depends: base, option-indef, bool-church, elem
  mixins: option-indef requires (Sig.Bool as Church.Bool)
