cabal-version: 2.2
name: option-utils
homepage: https://github.com/exordium/option#readme
version: 0.1.0.0
category: Exordium
synopsis: Utility functions for options based on a minimal signature
stability: cursed
bug-reports: https://github.com/exordium/option/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  location: https://github.com/exordium/option

library
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude, PatternSynonyms, ViewPatterns, LambdaCase
  exposed-modules: Utils
  signatures: Sig.Option
  build-depends: option-sig, bool-sig
